2003-09-19  Martin Willemoes Hansen  <mwh@sysrq.dk>

	* README: Updated for 0.1 release
	* NEWS: Ditto
	* doc/makefile: Added -f cmdline option
	* doc/en/Dia/Copy.xml: Removed
	* doc/en/Dia/Persistent.xml: Removed
	* doc/en/Dia/PersistentFactory.xml: Removed
	* doc/en/Dia/ShapeViewInfoFree.xml: Removed
	* doc/en/Dia/ShapeViewInfo.xml: Removed
	* doc/en/Dia/StorageFreeFunc.xml: Removed
	* doc/en/Dia/StorageLoadFunc.xml: Removed
	* doc/en/Dia/StorageSaveFunc.xml: Removed
	* doc/en/Dia/Storage.xml: Removed
	* doc/en/DiaSharp/LoadObjectArgs.xml: Removed
	* doc/en/DiaSharp/LoadObjectHandler.xml: Removed
	* doc/en/DiaSharp/LoadStartArgs.xml: Removed
	* doc/en/DiaSharp/LoadStartHandler.xml: Removed
	* doc/en/DiaSharp/SaveObjectArgs.xml: Removed
	* doc/en/DiaSharp/SaveObjectHandler.xml: Removed
	* doc/en/DiaSharp/SaveStartArgs.xml: Removed
	* doc/en/DiaSharp/SaveStartHandler.xml: Removed
	* doc/diacanvas-docs.tree: Added
	* doc/diacanvas-docs.zip: Added
	* makefile: Do not build docs anymore

2003-09-15  Martin Willemoes Hansen  <mwh@sysrq.dk>

	* makefile: shortend a bit, and disabled auto generation of 
	api xml files
	* api/makefile: Added installation target
	* sample/makefile: Added installation target

2003-09-13  Martin Willemoes Hansen  <mwh@sysrq.dk>

	* sources/Dia.metadata: Hide references to DiaShapeViewInfo, cause
	  its internal.
	* sources/makefile: Removed old appliance of patch
	* patches/dia-storage.h.diff: Removed not needed anymore
	* patches/removal_of_persistens.diff: Patch to remove persistens 
	  functionality in DiaCanvas, should be in DiaCanvas cvs soon.
	* api/dia-api.xml: Reflects latest changes

2003-09-09  Martin Willemoes Hansen  <mwh@sysrq.dk>

	* sample/sample.cs: 
	* sample/glade/gui.glade: Cleaned up.
	* glue/dia-canvas-item.c: Added
	* dia/CanvasItem.custom: Added access to connected_handles
	* glue/dia-canvas-view.c: 
	* dia/CanvasView.custom: Added access to handle_layer
	* dia/PlacementTool.cs: Initial grabbing functionallity